--- a/style.css
+++ b/style.css
@@ -1,53 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-
 * {
     margin: 0;
     padding: 0;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/* HEADER */
 header {
-    background-color: #1f2937;
-    padding: 1em 13em;
+    background-color: #1F2937;
+    padding: 20px 5%;
 }
 
-/* NAVIGATION */
 #logo {
     font-size: 24px;
-    font-weight: 900;
     color: #F9FAF8;
+    font-weight: bold;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
 }
 
 .nav ul {
     list-style-type: none;
     display: flex;
-    gap: 1.5em;
+    gap: 10px;
 }
 
-.secondary,
-a:link {
+a {
+    text-decoration: none;
+    color: #E5E7EB;
+    font-size: 16px;
+}
+
+.info {
     font-size: 18px;
     color: #E5E7EB;
-    text-decoration: none;
+    padding-bottom: 10px;
 }
 
-/* WELCOME */
 .welcome {
-    padding: 7em 0;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 2em;
+    padding: 60px 5%;
+    flex-wrap: wrap;
 }
 
 .welcome .left {
@@ -59,127 +62,150 @@ a:link {
 .welcome .right {
     flex-shrink: 0;
     width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.welcome .left,
+.welcome .right {
+    flex: 1 1 300px;
 }
 
 .hero {
+    font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
-    font-size: 48px;
 }
 
-button {
-    padding: 7px 1em;
-    width: 120px;
+.btn {
     background-color: #3882F6;
     border-radius: 8px;
+    width: 100px;
+    text-align: center;
+    padding: 5px 10px;
+    font-weight: bold;
 }
 
-.welcome button {
-    border: none;
+.right .btn {
+    border: 1px solid white;
 }
 
 .image {
     background-color: gray;
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 215px;
+    align-items: center;
+    text-align: center;
+    width: 50%;
+    max-width: 400px;
+    height: auto; 
+    padding: 100px 50px;
 }
 
-/* CARD SECTION */
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 13em;
-    margin-top: 3em;
+    padding: 20px 20px;
+    margin-top: 20px;
 }
 
 main h2 {
     font-size: 36px;
     font-weight: 900;
-    color: #1f2937;
+    text-align: center;
 }
 
-.card-container {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin: 3em 0 6em 0;
+    margin: 40px 0 10px 0;
+    gap: 0px;
 }
 
 .card {
     text-align: center;
-    max-width: 200px;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    gap: .5em;
+    gap: 20px;
+    flex-direction: column;
+    max-width: 200px;
+    height: 300px;
 }
 
-.square {
-    border: 4px solid #3882F6;
+.box {
+    border: 4px solid dodgerblue;
     border-radius: 20px;
     width: 160px;
     height: 160px;
 }
 
-/* QUOTE */
 .quote {
+    background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #E5E7EB;
-    padding: 7em 13em;
-}
-
-.quote p {
-    align-self: flex-end;
-    font-weight: bolder;
-    font-size: 24px;
-    color: #1f2937;
+    padding: 80px 25%;
 }
 
 .quote em {
     font-size: 36px;
-    font-weight: 100;
-    color: #1f2937;
+    font-weight: light;
+    font-style: italic;
+    color: #1F2937;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
 }
 
-/* SIGN UP */
-.sign-up {
+.quote p {
+    font-weight: 700;
+    font-size: 24px;
+    flex-wrap: wrap;
+    text-align: right;
+    margin-left: auto;
+}
+
+.signup {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5em 13em;
+    padding: 60px 5%;
 }
 
-.container {
+.actionbox {
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
     justify-content: space-around;
     align-items: center;
-    background-color: #3882F6;
-    padding: 3em;
-    width: 100%;
+    background-color: dodgerblue;
     border-radius: 10px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-right: 100px;
+    padding-left: 100px;
 }
 
-.container button {
-    border: 2px solid #FFF;
+.actionbox .btn {
+    border: 2px solid #fff;
+    padding: 10px 20px;
 }
 
 strong {
     font-size: 24px;
-    color: #FFF;
+    color: #fff;
 }
 
-/* FOOTER */
 footer {
-    background-color: #1f2937;
-    color: #FFF;
+    background-color: #1F2937;
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2em 0;
+    padding: 30px;
 }
